<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/layout_shadow_color"
        app:layout_constraintBottom_toTopOf="@+id/btnAdicionarCarrinho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#c0c6d7"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProduto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/user_no_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="98dp"
                tools:layout_conversion_absoluteWidth="98dp" />

            <TextView
                android:id="@+id/txtNomeProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="38dp"
                android:text="Produto"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produtoValorUnitario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.543" />

            <TextView
                android:id="@+id/txtValorUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="13dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/editQtde"
                app:layout_constraintStart_toStartOf="@+id/editQtde" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="@string/cadastroPedidoQuantidade"
                app:layout_constraintBottom_toTopOf="@+id/textView21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.298"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editQtde"
                android:layout_width="89dp"
                android:layout_height="43dp"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="36dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/txtValorVenda"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.686"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:text="@string/cadastroProdutoValorTotal"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtValorVenda"
                app:layout_constraintEnd_toStartOf="@+id/editQtde" />

            <TextView
                android:id="@+id/txtValorVenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="96dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView21" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnAdicionarCarrinho"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_customizado"
        android:text="Adicionar ao Carrinho"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>